# DrD

./: LICENSE.md  README.md
.github/workflows/: ccpp.yml
bestiary/animal/: basic_wolf.json
bestiary/humanoid/: skret  skret.json
classes/: alchymist.json  conjurer_of_cheap_tricks.json  fighter.json  ranger.json  rouge.json
cmake/: Environment.cmake  Environment.h
include/drd/: class.h  drd1.6.h  race.h
include/drd/gui/: main.h
include/drd/os/: os.h
include/drd/roll/: roll.h
include/drd/rules/: drd1.6.h
include/drd/rules/1.6/: class.h  race.h
include/drd/util/: utils.h
projects/dicecmd/: CMakeLists.txt  main.c
projects/drd-gui/: CMakeLists.txt  main.c
races/: barbarian.json  dwarf.json  elf.json  gnome.json  hobbit.json  human.json  kroll.json
src/: CMakeLists.txt  checks.c  class.c  race.c
src/android/: CMakeLists.txt
src/os/: CMakeLists.txt  oscommon.c
src/os/linux/: os.c
src/os/windows/: os.c
src/roll/: CMakeLists.txt  roll.c
src/vxwidgets/: CMakeLists.txt
src/wxwidgets/: CMakeLists.txt  DrdGuiApp.cpp  DrdGuiApp.hpp  DrdGuiFrame.cpp  DrdGuiFrame.hpp  main.cpp
